@@ -14,6 +14,7 @@ For a complete change history, please see the Subversion log comments.
 
 Version 6.0.1 (SVN branch-6-0):
 ---------------------------
+- Fix rendering of lines with outlinewidth set if not on first style (#3935)
 
 - Added writing of cluster object when saving map. Also improved handling of
   cluster parsing errors (#3934)
